- Fix overflow bug

--- a/src/assets/sass/objects/_view.scss
+++ b/src/assets/sass/objects/_view.scss
@@ -2,7 +2,7 @@
     display:block;
     position:relative;
     overflow-x:visible;
-    overflow-y:visible;
+    overflow-y:auto;
 
     // Styles de positionnements
     &.view--main{
